--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -14,4 +14,5 @@
   </ion-header>
 
   <app-explore-container name="Tab 2 page"></app-explore-container>
+  <ion-button (click)="navigateToPlayer()">Play epub</ion-button>
 </ion-content>
